HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuPtrDerefHostMemory/Expected.uv
//! Expected diagnostic metadata for the GpuPtrDerefHostMemory rejected-source specimen.

expectedDiagnostic("E-CON-0150", "rule.20.GpuPtr-Deref-Err")
